--- a/MB/static/css/base.css
+++ b/MB/static/css/base.css
@@ -1,8 +1,8 @@
 h1 {
-  color: red;
+  color: rgb(124, 84, 243);
 }
 
 body {
-  background-color: #000;
+  background-color: rgb(65, 63, 63);
   color: #fff;
 }
